--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
     <script src="https://cdn.jsdelivr.net/npm/vue-router@3/dist/vue-router.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuex@3/dist/vuex.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@0.19.0/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"
+    />
     <!-- built files will be auto injected -->
   </body>
 </html>
